# hakimi-hub

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/cache/: mod.rs  resource_cache.rs
src/cli/: args.rs  commands.rs  mod.rs
src/core/: config.rs  hub.rs  mod.rs  shutdown.rs
src/dns/: doh_client.rs  ip_prober.rs  mod.rs  resolver.rs  stream_resolver.rs  working_ip_store.rs
src/git/: config.rs  mod.rs  ssh_guide.rs
src/intercepts/: matcher.rs  mirror_health.rs  mod.rs
src/mitm/: ca.rs  cert_cache.rs  mod.rs  sni_spoof.rs  tls_origin.rs  tls_terminator.rs
src/proxy/: handler.rs  metrics.rs  mod.rs  server.rs  tunnel.rs
src/rules/: builtin.rs
src/system/: linux.rs  macos.rs  mod.rs  pac.rs  windows.rs
src/system/proxy_guard/: linux.rs  macos.rs  mod.rs  windows.rs
src/utils/: banner.rs  evictable_cache.rs  logging.rs  mod.rs  paths.rs  process.rs  ui.rs
tests/: blackbox_tests.rs
